name:                hello-seed
version:             0.1.0.0
author:              sashi0034
maintainer:          sashi@kmc.gr.jp
cabal-version:       >=1.10
build-type:          Simple


executable hello-seed
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SDLWrapper
                     , InputIntent
                     , InputState
                     , Vec
                     , World
                     , ImageRsc
                     , FontRsc
                     , Rendering
                     , AnimUtil
                     , MainScene.MainScene
                     , MainScene.MainSceneBehavior
                     , MainScene.Player
                     , MainScene.PlayerBehavior
                     , MainScene.Background
                     , MainScene.BackgroundBehavior
                     , MainScene.MeteorManager
                     , MainScene.MeteorManagerBehavior
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , sdl2
                     , sdl2-image
                     , sdl2-ttf
                     , text
                     , StateVar
                     , linear
                     , time
                     , random
  default-language:    Haskell2010

