name:                hello-seed
version:             0.1.0.0
author:              sashi0034
maintainer:          sashi@kmc.gr.jp
cabal-version:       >=1.10
build-type:          Simple


executable hello-seed
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SDLWrapper
                     , InputIntent
                     , InputState
                     , Vec
                     , ImageRsc
                     , FontRsc
                     , FontOutlined
                     , Rendering
                     , AnimUtil
                     , CollisionUtil
                     , Types
                     , Scene.Scene
                     , Scene.SceneBehavior
                     , Scene.Player
                     , Scene.PlayerBehavior
                     , Scene.Background
                     , Scene.BackgroundBehavior
                     , Scene.MeteorManager
                     , Scene.MeteorManagerBehavior
                     , Scene.InfoUI
                     , Scene.InfoUIBehavior
                     , Scene.HarvestManager
                     , Scene.HarvestManagerBehavior
                     , Scene.EffectObject
                     , Scene.EffectObjectBehavior
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , sdl2
                     , sdl2-image
                     , sdl2-ttf
                     , text
                     , StateVar
                     , linear
                     , time
                     , random
                     , mtl
  default-language:    Haskell2010

