name:                hello-seed
version:             0.1.0.0
author:              sashi0034
maintainer:          sashi@kmc.gr.jp
cabal-version:       >=1.10
build-type:          Simple


executable hello-seed
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       SDLWrapper
                     , InputIntent
                     , InputState
                     , Vec
                     , ImageRsc
                     , FontRsc
                     , FontOutlined
                     , Rendering
                     , AnimUtil
                     , CollisionUtil
                     , Types
                     , ConstParam
                     , Scene.Scene
                     , Scene.SceneAct
                     , Scene.Player
                     , Scene.PlayerAct
                     , Scene.Background
                     , Scene.BackgroundAct
                     , Scene.MeteorManager
                     , Scene.MeteorManagerAct
                     , Scene.InfoUI
                     , Scene.InfoUIAct
                     , Scene.HarvestManager
                     , Scene.HarvestManagerAct
                     , Scene.EffectObject
                     , Scene.EffectObjectAct
                     , Scene.InterAct
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , sdl2
                     , sdl2-image
                     , sdl2-ttf
                     , sdl2-gfx
                     , text
                     , StateVar
                     , linear
                     , time
                     , random
                     , mtl
                     , lens
                     , ease
  default-language:    Haskell2010

